# AgEngineCPP

./: .gitignore  .gitmodules  AgEngineUML.xmi  CMakeLists.txt  Game.cpp  Game.h  Game.hpp  imgui.ini  main.cpp
ECS/: CMakeLists.txt  Component.h  Component.hpp  Entity.h  Entity.hpp  EntityManager.cpp  EntityManager.h  EntityManager.hpp  RenderComponent.cpp  RenderComponent.h  RenderComponent.hpp
FastNoise/: CMakeLists.txt
Tools/MonsterEditor/: MonsterEditor.ui
cmake_modules/: FindLibNoise.cmake
map/: CMakeLists.txt  Level.cpp  Level.h  Level.hpp  MapConstants.hpp  TileInfo.h  TileType.hpp  Tileinfo.hpp  WorldMapGenerator.hpp  map.cpp  map.h  worldmap.cpp  worldmap.h
noiseutils/: CMakeLists.txt
renderer/: BaseRenderer.cpp  BaseRenderer.hpp
utility/: CMakeLists.txt  TextureManager.cpp  TextureManager.hpp  random.cpp
